RELEASE 4.1:

2013-04-10  Earnie Boyd  <earnie@users.sourceforge.net>
	* include/windows.h (NOWH): Correct typo in macro name.
	* include/excpt.h (_EXCEPTION_DISPOSITION): Adjust indentation.
	(_exception_code): Add declaration.
	(_exception_info): Ditto.
	(_abnormal_termination): Ditto.
	(_except_handler): Ditto.
	(_EXCEPTION_RECORD): Ditto.
	(_CONTEXT): Ditto.
	(_DISPATCHER_CONTEXT): Ditto.
	(__C_specific_handler): Ditto.
	(GetExceptionCode): Add definition.
	(exception_code): Ditto.
	(GetExceptionInformation): Ditto.
	(exception_info): Ditto.
	(AbnormalTermination): Ditto.
	(abnormal_Termination): Ditto.
	(FIXME): Add FIXME notes in various places.

2012-10-15  Earnie Boyd  <earnie@users.sourceforge.net>

	Create a more modern windows.h

	* include/windows.h (NOWINDRES): Use to filter inclusion of winresrc.h.
	(NOATOM, NOCOMM, NOCRYPT, NOGDI, NOGDICAPMASKS, NOKANJI, NOMCX,
	NOMETAFILE, NOMINMAX, NOMSG, NOOPENFILE, NOWN, NORASTEROPS, NOSCROLL,
	NOSOUND, NOSYSMETRICS, NOTEXTMETRIC): Define if RC_INVOKED and
	NOWINRES is defined.
	(excpt.h, stdarg.h): Include if not RC_INVOKED.
	(wincon.h, winnetwk.h): Move location of inclusion.
	(wingdi.h): Include regardless of NOGDI.
	(imm.h): Move inclusion and guard with not defined NOIME.
	(winsock.h): Move inclusion and remove guard.
	(wincrypt.h, winefs.h, winscard.h): Add inclusion filtered by NOCRYPT.
	(commdlg.h): Move location of inclusion.
	(ole.h, ole2.h): Included filtered by INC_OLE1 inside
	WIN32_LEAN_AND_MEAN filter.  Include ole2.h outside WIN32_LEAN_AN_MEAN
	filter but filtered by INC_OLE2.
	(winsvc.h): Move location of inclusion filtered by NOSERVICE.
	(mcx.h): Add inclusion filtered by NOMCX.
	* include/_mingw.h (__MINGW_DEPRECATED): New macro.
	(__MINGW_IMPORT): Ditto.
	(__MINGW_EXPORT): Ditto.
	* include/rpc.h (sdkddkver.h): Remove inclusion.
	* include/rpcndr.h (error_status_t): Add type define.
	* include/wtypes.h (rpc.h, rpcndr.h) Move inclusion to before file
	header guard.