@@ -385,9 +385,9 @@ WINLDAPAPI PLDAP cldap_openW(const PWCHAR,ULONG);
 WINLDAPAPI ULONG ldap_connect(LDAP*,struct l_timeval*);
 WINLDAPAPI PLDAP ldap_sslinitA(PCHAR,ULONG,int);
 WINLDAPAPI PLDAP ldap_sslinitW(PWCHAR,ULONG,int);
-WINLDAPAPI ULONG ldap_start_tls_sA(LDAP*,PLDAPControlA*,PLDAPControlA*);
-WINLDAPAPI ULONG ldap_start_tls_sW(LDAP*,PLDAPControlW*,PLDAPControlW*);
-WINLDAPAPI BOOLEAN ldap_stop_tls_s(LDAP*);
+WINLDAPAPI ULONG ldap_start_tls_sA(PLDAP,PULONG,LDAPMessage,PLDAPControlA*,PLDAPControlA*);
+WINLDAPAPI ULONG ldap_start_tls_sW(PLDAP,PULONG,LDAPMessage,PLDAPControlW*,PLDAPControlW*);
+WINLDAPAPI BOOLEAN ldap_stop_tls_s(PLDAP);
 WINLDAPAPI ULONG ldap_get_optionA(LDAP*,int,void*);
 WINLDAPAPI ULONG ldap_get_optionW(LDAP*,int,void*);
 WINLDAPAPI ULONG ldap_set_optionA(LDAP*,int,const void*);
